<resources>
    <string name="app_name">SWAT</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Smart Control</string>
    <string name="slide_1_desc">Control your home appliances whenever you want from wherever you want!</string>

    <string name="slide_2_title">Real Time Updates</string>
    <string name="slide_2_desc">What is happening around your home? Is it thundering? No need to worry. We will get you the most accurate updates in real time!</string>

    <string name="slide_3_title">Predictions</string>
    <string name="slide_3_desc">Curious about the future? How about planning the next month? We will analyze the old usage details and predict the next month for you!</string>

    <string name="slide_4_title">Incredibly Speed</string>
    <string name="slide_4_desc">All these amazing stuff in this light weight, incredibly speed app!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> SWAT -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_drawer">Drawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigate">Navigate</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">New to SWAT? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="whatispid">What is Product ID ?</string>
    <string name="productId">Product ID</string>
    <string name="productName">Product Name</string>
    <string name="title_notifications">Notifications</string>
    <string name="spinner">Select Device</string>

</resources>
