<?xml version="1.0" encoding="utf-8"?>
<!--This xml file contains the UI contents to be displayed when Signup.java executed.-->
<!-- Layout is built upon a relative layout which will adjust according to the device screen sizes in order to give a better UX-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.chathumina.swat.Signup"
    android:background="@color/colorPrimaryDark">

    <!-- Child layout is a linear layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Progressbar to display the user the signup activity is running-->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />

        <!-- Secondary child layout-->
        <LinearLayout
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingBottom="30dp"
            android:background="@color/colorPrimaryDark">

            <!-- Text view to display the welcome message-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="35dp"
                android:textColor="#fff"
                android:text="Welcome to SWAT"/>
            <!-- Text view to display a description about our app-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:text="Lorem ipsum dolor sit amet, ipsum lectus, in convallis lacus lorem, neque non integer rutrum ipsum dui, libero arcu vitae, lacinia nibh orci sit elementum. "
                android:textSize="15sp"
                android:layout_marginTop="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@color/white">

            <!-- EditText field to get the email of the user-->
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"/>

            <!-- EditText to get the Password of the user-->
            <EditText
                android:id="@+id/userId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="User ID"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"/>

            <!-- EditText to get the confirm Password of the usr-->
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"/>

            <!-- Button to sign up the user.. Button is styled to give a good UX-->
            <Button
                android:id="@+id/sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/buttonstylepink"
                android:text="@string/action_sign_in_short"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <!-- Button to redirect the user to login activity.. Button is styled to give a good UX-->

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttonstylesignup"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="15dp" />
        </LinearLayout>



    </LinearLayout>

</RelativeLayout>
